--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html lang="en">
 <head>
+  <link rel="stylesheet" href="src/index.css" type="text/css">
   <meta charset="UTF-8">
   <meta name="viewport"
         content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
@@ -8,7 +9,24 @@
   <title>Parcel</title>
 </head>
 <body>
-<div id="root"></div>
+
+  <div class="container">
+    <div class="container-header">
+      <div class="container-header-title">分组列表</div>
+      <button class="container-header-btn">分组学员</button>
+    </div>
+    <div class="container-grouplist"></div>
+    <div class="trainerlist">
+      <ul>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+      </ul>
+    </div>
+    <div class="traineelist"></div>
+  </div>
+
 <script src="src/index.js"></script>
 </body>
 </html>
