--- a/index.html
+++ b/index.html
@@ -15,16 +15,50 @@
       <div class="container-header-title">分组列表</div>
       <button class="container-header-btn">分组学员</button>
     </div>
-    <div class="container-grouplist"></div>
-    <div class="trainerlist">
+    <div class="container-grouplist">
       <ul>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
+        <li class="container-grouplist-group">
+          <div class="container-grouplist-group-header">
+            <div class="container-grouplist-group-header-title">1组</div>
+            <div class="container-grouplist-group-header-trainers">
+              <div class="container-grouplist-group-header-trainers-trainer">4.张钊</div>
+              <div class="container-grouplist-group-header-trainers-trainer">8.王雅君</div>
+            </div>
+          </div>
+          <div class="container-grouplist-group-trainee"></div>
+        </li>
+        <li class="container-grouplist-group">
+          <div class="container-grouplist-group-header">
+            <div class="container-grouplist-group-header-title">1组</div>
+            <div class="container-grouplist-group-header-trainers">
+              <div class="container-grouplist-group-header-trainers-trainer">4.张钊</div>
+              <div class="container-grouplist-group-header-trainers-trainer">8.王雅君</div>
+            </div>
+          </div>
+          <div class="container-grouplist-group-trainee"></div>
+        </li>
+        <li class="container-grouplist-group">
+          <div class="container-grouplist-group-header">
+            <div class="container-grouplist-group-header-title">1组</div>
+            <div class="container-grouplist-group-header-trainers">
+              <div class="container-grouplist-group-header-trainers-trainer">4.张钊</div>
+              <div class="container-grouplist-group-header-trainers-trainer">8.王雅君</div>
+            </div>
+          </div>
+          <div class="container-grouplist-group-trainee"></div>
+        </li>
+        <li class="container-grouplist-group">
+          <div class="container-grouplist-group-header">
+            <div class="container-grouplist-group-header-title">1组</div>
+            <div class="container-grouplist-group-header-trainers">
+              <div class="container-grouplist-group-header-trainers-trainer">4.张钊</div>
+              <div class="container-grouplist-group-header-trainers-trainer">8.王雅君</div>
+            </div>
+          </div>
+          <div class="container-grouplist-group-trainee"></div>
+        </li>
       </ul>
     </div>
-    <div class="traineelist"></div>
   </div>
 
 <script src="src/index.js"></script>
