--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
   <title>Parcel</title>
 </head>
 <body>
+<!--  TODO GTB-知识点: - 页面需要后端请求数据，前端用react渲染，而不是在html里面写静态页面哈-->
+<!--  TODO GTB-综合: - 整体完成度太低了，其他维度无法考察-->
 
   <div class="container">
     <div class="container-header">
